created mysql module and tests
